--- a/src/components/topologyQuizesTable/TopologyQuizesTable.scss
+++ b/src/components/topologyQuizesTable/TopologyQuizesTable.scss
@@ -2,6 +2,14 @@
     height: 600px;
     padding: 20px;
 
+    .correct-first-attempt {
+      background-color: green !important;
+    }
+
+    .incorrect-first-attempt {
+      background-color: red !important;
+    }
+
     .topologyQuizTableTitle {
         width: 100%;
         font-size: 24px;
