--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,61 +1,71 @@
-.Register{
-    height: 100vh;
+.registerWrapper {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  .registerTitle {
+    font-size: 24px;
+    font-weight: bold;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 20px;
+  }
 
-    form{
+  .Register {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-bottom: 10px;
+
+    form {
       display: flex;
       flex-direction: column;
       align-items: center;
 
-      input{
+      input {
         width: 200px;
         height: 30px;
         margin: 10px;
       }
 
-      button{
+      button {
         width: 200px;
         height: 30px;
         border: none;
+        margin-top: 10px;
         background-color: purple;
         color: white;
         font-weight: bold;
         cursor: pointer;
       }
 
-      span{
+      span {
         font-size: 12px;
         color: red;
         margin-top: 10px;
       }
     }
-}
-
-.registerToLogin{
-  display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 250px;
-    margin-top: -270px;
-  button{
-    width: 200px;
-    height: 30px;
-    border: none;
-    background-color: pink;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
   }
-}
 
-.registerTitle{
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: -250px;
-    margin-top: 250px;
+  .registerToLogin {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 20px;
+
+    button {
+      width: 200px;
+      height: 30px;
+      border: none;
+      background-color: pink;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
+  }
 }
