--- a/src/pages/viewquiza/viewQuiz.scss
+++ b/src/pages/viewquiza/viewQuiz.scss
@@ -34,3 +34,11 @@
       background-color: #e0e0e0;
     }
   }
+
+.quiz-outside-view {
+  display: flex;
+
+  .quiz-inner-view {
+    flex: 6;
+  }
+}
